# x12-edi-processor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_AUDIT.md  LAMBDA_LAYER_IMPLEMENTATION.md  PROJECT_REORGANIZATION.md  PYTHON_VERSION_NOTE.md  QUICKSTART.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  debug_277ca.py  main.py  pyproject.toml  requirements.txt  test_277_hdi_files.py  test_hdi_samples.py
.github/: copilot-instructions.md
lambda/: backup_lambda_handler.py  build_zip.py  template.yaml
logs/: README.md
prompts/: HDI_SAMPLE_FILES_ANALYSIS.md  PYTHON_BEST_PRACTICES_REVIEW.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_RESULTS_277CA.md
scripts/: README.md  __init__.py  build.sh  build_layer.py  build_zip.py  compare_277_files.py
src/: __init__.py
src/core/: config.py  exceptions.py  logging_config.py  reconciliation.py
src/handlers/: __init__.py  lambda_handler.py
src/input/: __init__.py  base_input.py  local_input.py  s3_input.py  upload_input.py
src/parsers/: __init__.py  base_parser.py  x12_277_parser.py  x12_277ca_parser.py  x12_835_parser.py
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: README.md  conftest.py
tests/debug/: __init__.py  debug_parser.py
tests/fixtures/: README.md  test_payload.json
tests/integration/: __init__.py  test_277ca.py  test_simple.py
tests/unit/: test_input_handlers.py  test_parsers.py
